@@ -1,5 +1,14 @@
 2007-10-17  Dan Williams  <dcbw@redhat.com>
 
+	* src/wireless-dialog.h
+	  src/wireless-dialog.c
+	  src/applet.c
+		- Work with multiple wireless cards
+		- Make more suitable to password entry as opposed to full-blown
+			Other Network setup
+
+2007-10-17  Dan Williams  <dcbw@redhat.com>
+
 	* nm-applet.desktop
 		- Remove OnlyShowIn; the applet is supposed to be shown anywhere anyway
 			(rh #336021)
